--- a/.github/workflows/ci-soteria.yml
+++ b/.github/workflows/ci-soteria.yml
@@ -52,5 +52,5 @@ jobs:
         shell: bash
 
       - name: Run Soteria
-        run: cd programs/governance-rewards/ && soteria -analyzeAll .
+        run: cd programs/no-transfers/ && soteria -analyzeAll .
         shell: bash
